tests/fixtures/errors/missing_return.cpp
// Test: wrong return type
void foo() {
    return 5;
}
int main() {
    return 0;
}
